--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,62 +1,40 @@
-name: CI
+name: Deploy Package CI
 
 on:
-  - pull_request
-  - push
+  push:
+    branches:
+      - main
 
 jobs:
-  lint:
-    if:
-      github.event_name != 'pull_request' ||
-      github.event.pull_request.head.repo.full_name !=
-      github.event.pull_request.base.repo.full_name
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          cache: npm
-          node-version: 22
+    - uses: actions/checkout@v4
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
 
-      - name: Install dependencies
-        run: npm ci
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: "pnpm"
 
-      - name: Lint
-        run: npm run lint:ci
+    - name: Install dependencies
+      run: pnpm install
 
-      - name: Typecheck
-        run: npm run typecheck
+    - name: Build
+      run: |
+        pnpm run build:esm
+        mkdir build
+        cp -r lib build/lib
+        cp package.json build/package.json
 
-      - name: Spellcheck
-        run: npm run spellcheck:ci
-
-  test:
-    if:
-      github.event_name != 'pull_request' ||
-      github.event.pull_request.head.repo.full_name !=
-      github.event.pull_request.base.repo.full_name
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          cache: npm
-          node-version: ${{ matrix.node }}
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
-
-    strategy:
-      fail-fast: true
-      matrix:
-        node:
-          - 18
-          - 20
-          - 22
-        os:
-          - ubuntu-latest
-          - windows-latest
-          - macos-latest
+    - name: Deploy build
+      uses: s0/git-publish-subdir-action@develop
+      env:
+        REPO: self
+        BRANCH: build # The branch name where you want to push the assets
+        FOLDER: build # The directory where your assets are generated
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
+        MESSAGE: "Build: ({sha}) {msg}" # The commit message
